# AutoRedTeam-Orchestrator

./: .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_CONFIG_GUIDE.md  MIGRATION.md  README.md  README_DE.md  README_EN.md  README_FR.md  README_JA.md  README_RU.md  SECURITY.md  action.yml  auto_recon.py  main.py  mcp.json  mcp_server_full.py  mcp_stdio_server.py  mcp_tools.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.sh  setup_windsurf_mcp.sh  test_dlut_recon.py  test_full_version.py  test_intelligent_recon.py  test_optimization.py  test_server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  vulnerability_report.md
.github/workflows/: ci.yml
autort/: __init__.py  exploiter.py  pentest.py  redteam.py  report.py  scanner.py
cli/: __init__.py  main.py
config/: config.yaml.example  external_tools.yaml.example
core/: __init__.py  ai_engine.py  attack_chain.py  complete_recon_toolkit.py  container.py  deep_vuln_scanner.py  defaults.py  engine_router.py  full_recon_engine.py  full_vuln_scanner.py  intelligent_recon_engine.py  mcp_server.py  mcts_planner.py  mega_payload_library.py  pipeline.py  response_filter.py  result_aggregator.py  session_manager.py  tool_registry.py
core/ad/: ad_enum.py  kerberos_attack.py  kerberos_attacks.py
core/api_security/: jwt.py  oauth.py  websocket.py
core/c2/: base.py  beacon.py  chunked_transfer.py  crypto.py  encoding.py  protocol.py  tunnels.py  websocket_tunnel.py
core/concurrency/: circuit_breaker.py  metrics.py  pool.py  rate_limiter.py
core/config/: __init__.py  loader.py  models.py
core/credential/: credential_dumper.py  password_finder.py
core/cve/: __init__.py  ai_poc_generator.py  auto_exploit.py  manager.py  poc_engine.py  search.py  sources.py  storage.py  subscription_manager.py  update_manager.py
core/detectors/: __init__.py  advanced_verifier.py  base.py  false_positive_filter.py  oob_server.py
core/evasion/: payload_obfuscator.py  waf_bypass_engine.py
core/exceptions/: auth.py  base.py  exploit.py  http.py  scan.py  utils.py
core/exfiltration/: base.py
core/http/: client.py  (+2 more)
handlers/: __init__.py  _detector_handlers_legacy.py  ad_handlers.py  ai_handlers.py  api_security_handlers.py  cloud_security_handlers.py  cve_handlers.py  detector_factory.py  detector_handlers.py  error_handling.py  external_tools_handlers.py  knowledge_handlers.py  lateral_handlers.py  mcts_handlers.py  misc_handlers.py  orchestration_handlers.py  parallel_handlers.py  persistence_handlers.py  prompt_handlers.py  recon_handlers.py  redteam_handlers.py  report_handlers.py  resource_handlers.py  session_handlers.py  supply_chain_handlers.py
modules/: __init__.py  adaptive_payload_engine.py  advanced_tools.py  ai_decision_engine.py  api_security_tools.py  async_http_pool.py  async_scanner.py  cloud_security_tools.py  component_fingerprint.py  enhanced_detector_tools.py  enhanced_scanner.py  exploit_templates.py  js_analyzer.py  mega_payloads.py  nuclei_integration.py  oob_detector.py  oob_platform.py  optimization_tools.py  payload_library.py  performance_monitor.py  redteam_tools.py  smart_cache.py  supply_chain_tools.py  v25_tools.py  vuln_correlation_engine.py  vuln_verifier.py  workflow.py
payloads/: complete_payload_db.json
reports/: dlut_recon_20251127_092003.json  recon_dlut_edu_cn_20251127_092611.html
scripts/: check_paths.py  fix_fstring_logging.py
shared/: __init__.py  subprocess_runner.py  validators.py
src/: __init__.py
templates/: poc_template_slim.py
tests/: test_cli.py  test_core_concurrency.py  test_core_cve_manager.py  test_core_exploit_engine.py  test_core_http.py  test_core_http_client.py  test_core_session.py  test_core_session_manager.py  test_detectors_prototype_pollution.py  test_detectors_request.py  test_handlers_detector.py  test_handlers_init.py  test_handlers_orchestration.py  test_handlers_redteam.py  test_knowledge_manager.py  test_knowledge_sqlite.py  test_mcp_server_smoke.py  test_modules_websocket.py  test_passive_recon.py  test_poc_engine.py  test_sandbox.py  test_utils.py
tools/: .gitignore  __init__.py  downloader.py  payload_tools.py  pentest_tools.py  web_scan_tools.py
utils/: __init__.py  async_utils.py  command_executor.py  config.py  config_manager.py  crypto.py  decorators.py  input_validator.py  logger.py  mcp_tooling.py  net_utils.py  report_generator.py  responses.py  scan_monitor.py  task_queue.py  terminal_display.py  terminal_output.py  tool_checker.py  validators.py
(+199 files in other folders)
